--- a/README.org
+++ b/README.org
@@ -475,11 +475,13 @@ yet used.
 You may also customize specific parameters from the command line:
 
 #+begin_example
-  $ snakemake -jall --config outdir=junk --config ntracks=10 all_depos
+  $ snakemake -jall --config outdir=junk ntracks=10 all_depos
   $ eom junk/plots/depos-diagnostic.png 
 #+end_example
 
-A ~--config~ wins over an entry in a ~--configfile~.
+A ~--config~ wins over an entry in a ~--configfile~.  Note, a single
+~--config~ flag should be used to indicate all parameter overrides.
+Adding another ~--config~ will negate all prior.
 
 * Snakemake
 :PROPERTIES:
@@ -495,7 +497,7 @@ It is instructive to visualize the overall DAG and ~snakemake~ provides
 this by running:
 
 #+begin_src shell :exports both :results none
-  snakemake --dag all > toyzero-all-dag.dot
+  snakemake --dag all just_images > toyzero-all-dag.dot
   dot -Tsvg -o toyzero-all-dag.svg toyzero-all-dag.dot
   dot -Tpdf -o toyzero-all-dag.pdf toyzero-all-dag.dot
 #+end_src
