--- a/README.org
+++ b/README.org
@@ -573,3 +573,48 @@ made available.  If the changes are generally useful, please consider
 making a PR!
  
 
+* Production
+
+We run from containers.  Eg, as a mongo ~docker~ command that runs
+~snakemake~ in the ~toyzero~ container.
+
+#+begin_example
+
+  $ docker run \
+    --user user \
+    --volume (pwd):/data \
+    -ti ls4gan/toyzero:0.3.0 \
+    "cd toyzero && \
+     snakemake just_tar --notemp -j1 -p \
+     --config seed=1234 outdir=/data ntracks=100 nevents=10 wcloglvl=debug threads=8"
+
+#+end_example
+
+Or, one layer down in the ~wirecell~ container, assuming you have
+~toyzero~ checked out locally:
+
+#+begin_example
+
+  $ cd .. # parent holding local toyzero/
+  $ mkdir run
+  $ cd run/
+  $ cp -a ../toyzero/{Snakefile,cfg,toyzero.yaml} .
+  $ docker run \
+      --user user \
+      --volume (pwd):/data \
+      -ti ls4gan/wirecell:0.16.0 \
+      "cd /data && \
+       snakemake just_tar -j1 -p \
+       --config seed=1234 ntracks=100 nevents=10 wcloglvl=debug threads=8"
+  $ ls -l toyzero-100-10-1234.tar
+
+#+end_example
+
+Note: will likely want to set ~threads=1~ for batch and *MUST* set
+~seed=XYZ~ uniquely for each submission.  The ~outdir~ setting may be used
+if output should not go to the CWD.  The tar file base name can be
+controlled with ~outname~.  Intermediate files that eventually go in to
+the tar file land in ~{outdir}/seed-{seed}/~.  The ~./.snakemake/~
+directory receives snakemake control and log files.  If run with
+~--notemp~ then (ironically, should be named ~--yestemp~) temporary files
+marked with ~temp()~ in the Snakefile are *kept*.
